# FunnyCommentator

./: .gitignore  LICENSE  README.md  config.json  ipupdater.py  pyproject.toml  requirements.txt  run.py  test_discord_consolidated.py  test_web_ip_monitor.py
.github/: copilot-instructions.md
docs/: COMPLETE_DOCUMENTATION.md  COMPREHENSIVE_TESTING_RESULTS.md  CREDENTIAL_SECURITY.md  ENTERPRISE_CREDENTIALS.md  PHASE_2_COMPLETION_FINAL.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_IMPLEMENTATION_PLAN.md  README.md  README_NEW.md  WEB_INTERFACE.md  p3.md
src/: __init__.py  ark_rcon.py  config.py  credential_manager.py  database.py  discord_manager.py  ip_monitor.py  ip_monitor_manager.py  log_manager.py  main.py  ollama_manager.py  player_profiles.py  process_manager.py  rcon_client.py  recent_context.py  server_config.py  vector_memory.py
tests/: README.md  TEST_ORGANIZATION.md  debug_config.py  diagnose_config.py  run_memory_tests.py  start_flask.py  test_ai_memory_integration.py  test_config.py  test_consolidated_ip_monitor.py  test_credential_count.py  test_cross_platform.py  test_database.py  test_deepseek_params.py  test_discord.py  test_discord_http.py  test_fix.py  test_fixed_allocation.py  test_immediate.py  test_ip_monitor.py  test_manager.py  test_manual_verification.py  test_ollama_direct.py  test_phase2_fix.py  test_phase3_integration.py  test_phase3_simple.py  test_player_profiles.py  test_rcon.py  test_reasoning.py  test_recent_context.py  test_runner.py  test_semantic_memory.py  test_similarity.py  test_vector_memory.py  (+3 more)
(+21 files in other folders)
